Todo/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo
  annotations:
    fluxcd.io/automated: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
        - name:  todo-app
          image: anniinasainio/todo:2.0.0
