Todo/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-svc
spec:
  type: NodePort
  selector:
    app: todo
  ports:
    - name: http
      nodePort: 30080
      protocol: TCP
      port: 2345
      targetPort: 5000
